# dittotest

SyncThat/SyncThat/: Info.plist  SyncData.swift  SyncThatApp.swift
SyncThat/SyncThat.xcodeproj/: project.pbxproj
SyncThat/SyncThat.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
SyncThat/SyncThat.xcodeproj/project.xcworkspace/xcuserdata/robertwilliams.xcuserdatad/: UserInterfaceState.xcuserstate
SyncThat/SyncThatTests/: SyncThatTests.swift
SyncThat/SyncThatUITests/: SyncThatUITests.swift
sync-that-android/: settings.gradle.kts
sync-that-android/app/: build.gradle.kts
sync-that-android/app/src/androidTest/java/org/increscent/syncthat/: ExampleInstrumentedTest.kt
sync-that-android/app/src/main/: AndroidManifest.xml
sync-that-android/app/src/main/java/org/increscent/syncthat/: .gitignore  ConstantsExample.kt  MainActivity.kt
sync-that-android/app/src/main/res/values/: strings.xml  themes.xml
sync-that-android/app/src/test/java/org/increscent/syncthat/: ExampleUnitTest.kt
sync-that-android/gradle/: libs.versions.toml
sync-that-android/gradle/wrapper/: gradle-wrapper.properties
sync-that-ios/SyncThat/: ConstantsExample.swift  ContentView.swift  Info.plist  SyncData.swift
sync-that-ios/SyncThat.xcodeproj/xcuserdata/robertwilliams.xcuserdatad/xcschemes/: xcschememanagement.plist
sync-that-ios/SyncThatUITests/: SyncThatUITestsLaunchTests.swift
sync-that-rust/: .gitignore  Cargo.toml  build.sh  run.sh
sync-that-rust/src/: constants-example.rs  main.rs
(+3 files in other folders)
