[package]
name = "sync-that-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.0", features = ["derive"] }
dittolive-ditto = { path = "/Users/robertwilliams/source/ditto/rust/dittolive-ditto" }
#dittolive-ditto = "4.10.0"
serde_json = "1.0.128"
tokio = "1.40.0"
